	- ldns trunk from today added in svn repo for fallback in case
	  no ldns is installed on the system.
	  make download_ldns refreshes the tarball with ldns svn trunk.
	- ldns-src.tar.gz is used if no ldns is found on the system, and
	  statically linked into unbound.
	- start of regional allocator code.
	- regional uses less memory and variables, simplified code.
	- remove of region-allocator.

17 October 2007: Wouter
	- fixup another cycle detect and ns-addr timeout resolution bug.
	  This time by refusing delegations from the cache without addresses
	  when resolving a mandatory-glue nameserver-address for that zone.
	  We're going to have to ask a TLD server anyway; might as well be
	  the TLD server for this name. And this resolves a lot of cases where
	  the other nameserver names lead to cycles or are not available.
	- changed random generator from random(3) clone to arc4random wrapped
	  for thread safety. The random generator is initialised with
	  entropy from the system.
	- fix crash where failure to prime DNSKEY tried to print null pointer
	  in the log message.
	- removed some debug prints, only verb_algo (4) enables them.
	- fixup test; new random generator took new paths; such as one 
	  where no scripted answer was available.
	- mark insecure RRs as insecure.
	- fixup removal of nonsecure items from the additional.
	- reduced timeout values to more realistic, 376 msec (262 msec has
	  90% of roundtrip times, 512 msec has 99% of roundtrip times.)
	- server selection failover to next server after timeout (376 msec).

16 October 2007: Wouter
	- no malloc in log_hex.
	- assertions around system calls.
	- protect against gethostname without ending zero.
	- ntop output is null terminated by unbound.
	- pidfile content null termination
	- various snprintf use sizeof(stringbuf) instead of fixed constant.
	- changed loopdetect % 8 with & 0x7 since % can become negative for
	  weird negative input and particular interpretation of integer math.